[Font Loading] The callback passed to document.fonts.ready should always be called https://bugs.webkit.org/show_bug.cgi?id=158884

Reviewed by Dean Jackson.

Source/WebCore:

The boolean was simply not being reset when loads start.

Test: fast/text/font-face-set-ready-fire.html

* css/FontFaceSet.cpp:
(WebCore::FontFaceSet::startedLoading):
* css/FontFaceSet.h:

LayoutTests:

* TestExpectations:
* fast/text/font-face-set-ready-fire-expected.txt: Added.
* fast/text/font-face-set-ready-fire.html: Added.

Canonical link: https://commits.webkit.org/177721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203002 268f45cc-cd09-0410-ab3c-d52691b4dbfc